promotion basic added

--- a/NaimouzaHighSchool/NaimouzaHighSchool.csproj
+++ b/NaimouzaHighSchool/NaimouzaHighSchool.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Models\Database\ExamDb.cs" />
     <Compile Include="Models\Database\ExcelExportDb.cs" />
     <Compile Include="Models\Database\PromotionBasicDb.cs" />
+    <Compile Include="Models\Database\RegistrationUpdaterDb.cs" />
     <Compile Include="Models\Database\RollUpdateDb.cs" />
     <Compile Include="Models\Database\SchoolLeavingAndCharacterDb.cs" />
     <Compile Include="Models\Database\StaffDetailDb.cs" />
@@ -147,9 +148,11 @@
     <Compile Include="Models\Utility\BoardStudent.cs" />
     <Compile Include="Models\Utility\CombSubPair.cs" />
     <Compile Include="Models\Utility\Constants.cs" />
+    <Compile Include="Models\Utility\EnumFile.cs" />
     <Compile Include="Models\Utility\ExcelColumnPositionServiceStaff.cs" />
     <Compile Include="Models\Utility\ExcelColumnPositionStaff.cs" />
     <Compile Include="Models\Utility\PromotionBasic.cs" />
+    <Compile Include="Models\Utility\RegistrationUpdater.cs" />
     <Compile Include="Models\Utility\RollRegistrationUpdater.cs" />
     <Compile Include="Models\Utility\RollUpdater.cs" />
     <Compile Include="Models\Utility\SchoolLeavingStudent.cs" />
@@ -175,6 +178,7 @@
     <Compile Include="ViewModels\GroupSubjectPaperViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\PromotionBasicViewModel.cs" />
+    <Compile Include="ViewModels\RegistrationUpdaterViewModel.cs" />
     <Compile Include="ViewModels\RollUpdateViewModel.cs" />
     <Compile Include="ViewModels\SchoolLeavingAndCharacterViewModel.cs" />
     <Compile Include="ViewModels\SessionViewModel.cs" />
@@ -214,6 +218,9 @@
     </Compile>
     <Compile Include="Views\PromotionBasicView.xaml.cs">
       <DependentUpon>PromotionBasicView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\RegistrationUpdaterView.xaml.cs">
+      <DependentUpon>RegistrationUpdaterView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\RollUpdateView.xaml.cs">
       <DependentUpon>RollUpdateView.xaml</DependentUpon>
@@ -319,6 +326,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\PromotionBasicView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\RegistrationUpdaterView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
