--- a/NaimouzaHighSchool/NaimouzaHighSchool.csproj
+++ b/NaimouzaHighSchool/NaimouzaHighSchool.csproj
@@ -138,11 +138,13 @@
     <Compile Include="Models\Database\RollUpdateDb.cs" />
     <Compile Include="Models\Database\SchoolLeavingAndCharacterDb.cs" />
     <Compile Include="Models\Database\StaffDetailDb.cs" />
+    <Compile Include="Models\Database\StdAddressUpdateDb.cs" />
     <Compile Include="Models\Database\StudentDataReadDb.cs" />
     <Compile Include="Models\Database\StudentDataWriteDb.cs" />
     <Compile Include="Models\Database\SubjectComboDb.cs" />
     <Compile Include="Models\Database\SubjectGroupDb.cs" />
     <Compile Include="Models\Database\TeacherEntryDb.cs" />
+    <Compile Include="Models\GlobalEnum.cs" />
     <Compile Include="Models\GlobalVar.cs" />
     <Compile Include="Models\StudentDataWriteModel.cs" />
     <Compile Include="Models\Utility\AdmissionInfo.cs" />
@@ -190,6 +192,7 @@
     <Compile Include="ViewModels\SchoolLeavingAndCharacterViewModel.cs" />
     <Compile Include="ViewModels\SessionViewModel.cs" />
     <Compile Include="ViewModels\StaffDetailViewModel.cs" />
+    <Compile Include="ViewModels\StdAddrUpdateViewModel.cs" />
     <Compile Include="ViewModels\StudentDataReadViewModel.cs" />
     <Compile Include="ViewModels\StudentDataWriteViewModel.cs" />
     <Compile Include="ViewModels\SubjectComboViewModel.cs" />
@@ -241,6 +244,9 @@
     </Compile>
     <Compile Include="Views\StaffDetailView.xaml.cs">
       <DependentUpon>StaffDetailView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\StdAddressUpdateView.xaml.cs">
+      <DependentUpon>StdAddressUpdateView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\StudentDataReadView.xaml.cs">
       <DependentUpon>StudentDataReadView.xaml</DependentUpon>
@@ -359,6 +365,10 @@
     <Page Include="Views\StaffDetailView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\StdAddressUpdateView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\StudentDataReadView.xaml">
       <SubType>Designer</SubType>
