--- a/NaimouzaHighSchool/NaimouzaHighSchool.csproj
+++ b/NaimouzaHighSchool/NaimouzaHighSchool.csproj
@@ -134,16 +134,19 @@
     <Compile Include="Models\Database\ExcelExportDb.cs" />
     <Compile Include="Models\Database\MarkEntryDb.cs" />
     <Compile Include="Models\Database\PromotionBasicDb.cs" />
+    <Compile Include="Models\Database\PromotionDb.cs" />
     <Compile Include="Models\Database\RegistrationUpdaterDb.cs" />
     <Compile Include="Models\Database\RollUpdateDb.cs" />
     <Compile Include="Models\Database\SchoolLeavingAndCharacterDb.cs" />
     <Compile Include="Models\Database\StaffDetailDb.cs" />
     <Compile Include="Models\Database\StdAddressUpdateDb.cs" />
+    <Compile Include="Models\Database\StudentBuilderFromCompleteMySqlDataReader.cs" />
     <Compile Include="Models\Database\StudentDataReadDb.cs" />
     <Compile Include="Models\Database\StudentDataWriteDb.cs" />
     <Compile Include="Models\Database\SubjectComboDb.cs" />
     <Compile Include="Models\Database\SubjectGroupDb.cs" />
     <Compile Include="Models\Database\TeacherEntryDb.cs" />
+    <Compile Include="Models\Database\UdiseDb.cs" />
     <Compile Include="Models\GlobalEnum.cs" />
     <Compile Include="Models\GlobalVar.cs" />
     <Compile Include="Models\StudentDataWriteModel.cs" />
@@ -156,6 +159,7 @@
     <Compile Include="Models\Utility\ExamMarks.cs" />
     <Compile Include="Models\Utility\ExcelColumnPositionServiceStaff.cs" />
     <Compile Include="Models\Utility\ExcelColumnPositionStaff.cs" />
+    <Compile Include="Models\Utility\Promotion.cs" />
     <Compile Include="Models\Utility\PromotionBasic.cs" />
     <Compile Include="Models\Utility\RegistrationUpdater.cs" />
     <Compile Include="Models\Utility\RollRegistrationUpdater.cs" />
@@ -188,16 +192,19 @@
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\MarkEntryViewModel.cs" />
     <Compile Include="ViewModels\PromotionBasicViewModel.cs" />
+    <Compile Include="ViewModels\PromotionViewModel.cs" />
     <Compile Include="ViewModels\RegistrationUpdaterViewModel.cs" />
     <Compile Include="ViewModels\RollUpdateViewModel.cs" />
     <Compile Include="ViewModels\SchoolLeavingAndCharacterViewModel.cs" />
     <Compile Include="ViewModels\SessionViewModel.cs" />
     <Compile Include="ViewModels\StaffDetailViewModel.cs" />
     <Compile Include="ViewModels\StdAddrUpdateViewModel.cs" />
+    <Compile Include="ViewModels\StudentClassBaseViewModel.cs" />
     <Compile Include="ViewModels\StudentDataReadViewModel.cs" />
     <Compile Include="ViewModels\StudentDataWriteViewModel.cs" />
     <Compile Include="ViewModels\SubjectComboViewModel.cs" />
     <Compile Include="ViewModels\TeacherEntryViewModel.cs" />
+    <Compile Include="ViewModels\UdiseViewModel.cs" />
     <Compile Include="Views\AcademicConfigurationView.xaml.cs">
       <DependentUpon>AcademicConfigurationView.xaml</DependentUpon>
     </Compile>
@@ -234,6 +241,9 @@
     <Compile Include="Views\PromotionBasicView.xaml.cs">
       <DependentUpon>PromotionBasicView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\PromotionView.xaml.cs">
+      <DependentUpon>PromotionView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\RegistrationUpdaterView.xaml.cs">
       <DependentUpon>RegistrationUpdaterView.xaml</DependentUpon>
     </Compile>
@@ -266,6 +276,9 @@
     </Compile>
     <Compile Include="Views\TeacherEntryView.xaml.cs">
       <DependentUpon>TeacherEntryView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\UdiseView.xaml.cs">
+      <DependentUpon>UdiseView.xaml</DependentUpon>
     </Compile>
     <Page Include="Views\AcademicConfigurationView.xaml">
       <SubType>Designer</SubType>
@@ -354,6 +367,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\PromotionView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\RegistrationUpdaterView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -395,6 +412,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\TeacherEntryView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\UdiseView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
