--- a/NaimouzaHighSchool/NaimouzaHighSchool.csproj
+++ b/NaimouzaHighSchool/NaimouzaHighSchool.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Models\Database\DeleteDb.cs" />
     <Compile Include="Models\Database\ExamDb.cs" />
     <Compile Include="Models\Database\ExcelExportDb.cs" />
+    <Compile Include="Models\Database\GenUpdateDb.cs" />
     <Compile Include="Models\Database\MarkEntryDb.cs" />
     <Compile Include="Models\Database\PromotionBasicDb.cs" />
     <Compile Include="Models\Database\PromotionDb.cs" />
@@ -151,6 +152,7 @@
     <Compile Include="Models\GlobalVar.cs" />
     <Compile Include="Models\StudentDataWriteModel.cs" />
     <Compile Include="Models\Utility\AdmissionInfo.cs" />
+    <Compile Include="Models\Utility\Age.cs" />
     <Compile Include="Models\Utility\BankBranch.cs" />
     <Compile Include="Models\Utility\BoardStudent.cs" />
     <Compile Include="Models\Utility\CombSubPair.cs" />
@@ -188,6 +190,7 @@
     <Compile Include="ViewModels\ExamViewModel.cs" />
     <Compile Include="ViewModels\ExcelEntryStaffViewModel.cs" />
     <Compile Include="ViewModels\ExcelExportViewModel.cs" />
+    <Compile Include="ViewModels\GenUpdateViewModel.cs" />
     <Compile Include="ViewModels\GroupSubjectPaperViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\MarkEntryViewModel.cs" />
@@ -228,6 +231,9 @@
     </Compile>
     <Compile Include="Views\ExcelExportView.xaml.cs">
       <DependentUpon>ExcelExportView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\GenUpdateView.xaml.cs">
+      <DependentUpon>GenUpdateView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\GroupSubjectPaperView.xaml.cs">
       <DependentUpon>GroupSubjectPaperView.xaml</DependentUpon>
@@ -317,6 +323,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\ExcelExportView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\GenUpdateView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
