--- a/NaimouzaHighSchool/app.config
+++ b/NaimouzaHighSchool/app.config
@@ -9,14 +9,9 @@
 
   <connectionStrings>
     <add name="nmhs_connection" connectionString= "server=127.0.0.1;port=3306;database=nmhs_desktop;username=delphinium_admin;password=dark.d@tura; Convert Zero Datetime=True" providerName="MySql.Data.MySqlClient"/>
-
-    
   <!--<add name="nmhs_connection" connectionString= "server=192.168.0.100;port=3306;database=nmhs_desktop;username=delphinium_admin;password=dark.d@tura; Convert Zero Datetime=True" providerName="MySql.Data.MySqlClient" />-->
   
   </connectionStrings>
-
-  
-
   <!--<runtime>
     <assemblybinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentassembly>
@@ -25,6 +20,9 @@
       </dependentassembly>
     </assemblybinding>
   </runtime>-->
-  
+
+  <appSettings>
+    <add key="serverCompName" value="\\Ami-laptop"/>
+  </appSettings>
   
 </configuration>
