--- a/NaimouzaHighSchool/NaimouzaHighSchool.csproj
+++ b/NaimouzaHighSchool/NaimouzaHighSchool.csproj
@@ -144,13 +144,10 @@
     <Compile Include="Models\Database\StudentBuilderFromCompleteMySqlDataReader.cs" />
     <Compile Include="Models\Database\StudentDataReadDb.cs" />
     <Compile Include="Models\Database\StudentDataWriteDb.cs" />
-    <Compile Include="Models\Database\SubjectComboDb.cs" />
-    <Compile Include="Models\Database\SubjectGroupDb.cs" />
     <Compile Include="Models\Database\TeacherEntryDb.cs" />
     <Compile Include="Models\Database\UdiseDb.cs" />
     <Compile Include="Models\GlobalEnum.cs" />
     <Compile Include="Models\GlobalVar.cs" />
-    <Compile Include="Models\StudentDataWriteModel.cs" />
     <Compile Include="Models\Utility\AdmissionInfo.cs" />
     <Compile Include="Models\Utility\Age.cs" />
     <Compile Include="Models\Utility\BankBranch.cs" />
@@ -158,6 +155,7 @@
     <Compile Include="Models\Utility\CombSubPair.cs" />
     <Compile Include="Models\Utility\Constants.cs" />
     <Compile Include="Models\Utility\EnumFile.cs" />
+    <Compile Include="Models\Utility\EventConnector.cs" />
     <Compile Include="Models\Utility\ExamMarks.cs" />
     <Compile Include="Models\Utility\ExcelColumnPositionServiceStaff.cs" />
     <Compile Include="Models\Utility\ExcelColumnPositionStaff.cs" />
@@ -169,10 +167,9 @@
     <Compile Include="Models\Utility\SchoolLeavingStudent.cs" />
     <Compile Include="Models\Utility\Staff.cs" />
     <Compile Include="Models\Utility\Subject.cs" />
-    <Compile Include="Models\Utility\SubjectCombo.cs" />
-    <Compile Include="Models\Utility\SubjectGroup.cs" />
     <Compile Include="Models\Utility\SubjectUtility.cs" />
     <Compile Include="Models\Utility\Teacher.cs" />
+    <Compile Include="ViewModels\BankClassBaseViewModel.cs" />
     <Compile Include="ViewModels\BoardExamViewModel.cs" />
     <Compile Include="ViewModels\ClassConfigurationViewModel.cs" />
     <Compile Include="ViewModels\Commands\RelayCommandWithParam.cs" />
@@ -191,7 +188,6 @@
     <Compile Include="ViewModels\ExcelEntryStaffViewModel.cs" />
     <Compile Include="ViewModels\ExcelExportViewModel.cs" />
     <Compile Include="ViewModels\GenUpdateViewModel.cs" />
-    <Compile Include="ViewModels\GroupSubjectPaperViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\MarkEntryViewModel.cs" />
     <Compile Include="ViewModels\PromotionBasicViewModel.cs" />
@@ -205,7 +201,6 @@
     <Compile Include="ViewModels\StudentClassBaseViewModel.cs" />
     <Compile Include="ViewModels\StudentDataReadViewModel.cs" />
     <Compile Include="ViewModels\StudentDataWriteViewModel.cs" />
-    <Compile Include="ViewModels\SubjectComboViewModel.cs" />
     <Compile Include="ViewModels\TeacherEntryViewModel.cs" />
     <Compile Include="ViewModels\UdiseViewModel.cs" />
     <Compile Include="Views\AcademicConfigurationView.xaml.cs">
@@ -234,9 +229,6 @@
     </Compile>
     <Compile Include="Views\GenUpdateView.xaml.cs">
       <DependentUpon>GenUpdateView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\GroupSubjectPaperView.xaml.cs">
-      <DependentUpon>GroupSubjectPaperView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\MarkEntryView.xaml.cs">
       <DependentUpon>MarkEntryView.xaml</DependentUpon>
@@ -273,12 +265,6 @@
     </Compile>
     <Compile Include="Views\StudentDataWriteView.xaml.cs">
       <DependentUpon>StudentDataWriteView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\StudentEntryPreviewView.xaml.cs">
-      <DependentUpon>StudentEntryPreviewView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\SubjectComboView.xaml.cs">
-      <DependentUpon>SubjectComboView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\TeacherEntryView.xaml.cs">
       <DependentUpon>TeacherEntryView.xaml</DependentUpon>
@@ -327,10 +313,6 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\GenUpdateView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\GroupSubjectPaperView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -410,14 +392,6 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\StudentDataWriteView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\StudentEntryPreviewView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\SubjectComboView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
