starting of new view2

--- a/NaimouzaHighSchool/NaimouzaHighSchool.csproj
+++ b/NaimouzaHighSchool/NaimouzaHighSchool.csproj
@@ -466,6 +466,9 @@
   <ItemGroup>
     <Resource Include="subject.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Asset\Images\raw1.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
