--- a/NaimouzaHighSchool/NaimouzaHighSchool.csproj
+++ b/NaimouzaHighSchool/NaimouzaHighSchool.csproj
@@ -471,6 +471,9 @@
   <ItemGroup>
     <Resource Include="Asset\Images\raw1.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Asset\Images\un1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
